dmn-feel-parser/src/gen/java/io/finmsg/dmn/feel/parser/FeelParser.java
// Generated from io/finmsg/dmn/feel/parser/FeelParser.g4 by ANTLR 4.13.2
package io.finmsg.dmn.feel.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FeelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BLOCK_COMMENT=1, LINE_COMMENT=2, WS=3, ELLIPSIS=4, POWER=5, LE=6, GE=7, 
		NE=8, DOT_DOT=9, ARROW=10, EQ=11, LT=12, GT=13, PLUS=14, MINUS=15, STAR=16, 
		SLASH=17, DOT=18, COMMA=19, COLON=20, LPAREN=21, RPAREN=22, LBRACKET=23, 
		RBRACKET=24, LBRACE=25, RBRACE=26, AT=27, FOR=28, IN=29, RETURN=30, IF=31, 
		THEN=32, ELSE=33, SOME=34, EVERY=35, SATISFIES=36, AND=37, OR=38, BETWEEN=39, 
		INSTANCE=40, OF=41, NOT=42, FUNCTION=43, EXTERNAL=44, TRUE=45, FALSE=46, 
		NULL=47, RANGE=48, LIST=49, CONTEXT=50, STRING_LITERAL=51, NUMBER_LITERAL=52, 
		IDENTIFIER=53;
	public static final int
		RULE_expressionRoot = 0, RULE_unaryTestsRoot = 1, RULE_textualExpressionsRoot = 2, 
		RULE_typeRoot = 3, RULE_expression = 4, RULE_textualExpressions = 5, RULE_textualExpression = 6, 
		RULE_forExpression = 7, RULE_iterationContext = 8, RULE_ifExpression = 9, 
		RULE_quantifiedExpression = 10, RULE_iterationBinding = 11, RULE_disjunction = 12, 
		RULE_conjunction = 13, RULE_comparison = 14, RULE_comparisonSuffix = 15, 
		RULE_comparisonOperator = 16, RULE_additiveExpression = 17, RULE_multiplicativeExpression = 18, 
		RULE_exponentiationExpression = 19, RULE_arithmeticNegation = 20, RULE_instanceOfExpression = 21, 
		RULE_postfixExpression = 22, RULE_postfixPart = 23, RULE_primaryExpression = 24, 
		RULE_parameters = 25, RULE_namedParameters = 26, RULE_namedParameter = 27, 
		RULE_positionalParameters = 28, RULE_functionDefinition = 29, RULE_formalParameters = 30, 
		RULE_formalParameter = 31, RULE_parameterName = 32, RULE_list = 33, RULE_context = 34, 
		RULE_contextEntry = 35, RULE_key = 36, RULE_unaryTests = 37, RULE_negatedUnaryTests = 38, 
		RULE_positiveUnaryTests = 39, RULE_positiveUnaryTest = 40, RULE_simplePositiveUnaryTest = 41, 
		RULE_interval = 42, RULE_intervalStart = 43, RULE_intervalEnd = 44, RULE_openIntervalStart = 45, 
		RULE_closedIntervalStart = 46, RULE_openIntervalEnd = 47, RULE_closedIntervalEnd = 48, 
		RULE_rangeLiteral = 49, RULE_endpoint = 50, RULE_literal = 51, RULE_atLiteral = 52, 
		RULE_name = 53, RULE_qualifiedName = 54, RULE_type = 55, RULE_contextTypeEntry = 56, 
		RULE_typeList = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"expressionRoot", "unaryTestsRoot", "textualExpressionsRoot", "typeRoot", 
			"expression", "textualExpressions", "textualExpression", "forExpression", 
			"iterationContext", "ifExpression", "quantifiedExpression", "iterationBinding", 
			"disjunction", "conjunction", "comparison", "comparisonSuffix", "comparisonOperator", 
			"additiveExpression", "multiplicativeExpression", "exponentiationExpression", 
			"arithmeticNegation", "instanceOfExpression", "postfixExpression", "postfixPart", 
			"primaryExpression", "parameters", "namedParameters", "namedParameter", 
			"positionalParameters", "functionDefinition", "formalParameters", "formalParameter", 
			"parameterName", "list", "context", "contextEntry", "key", "unaryTests", 
			"negatedUnaryTests", "positiveUnaryTests", "positiveUnaryTest", "simplePositiveUnaryTest", 
			"interval", "intervalStart", "intervalEnd", "openIntervalStart", "closedIntervalStart", 
			"openIntervalEnd", "closedIntervalEnd", "rangeLiteral", "endpoint", "literal", 
			"atLiteral", "name", "qualifiedName", "type", "contextTypeEntry", "typeList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'...'", "'**'", "'<='", "'>='", "'!='", "'..'", 
			"'->'", "'='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'.'", "','", 
			"':'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'@'", "'for'", "'in'", 
			"'return'", "'if'", "'then'", "'else'", "'some'", "'every'", "'satisfies'", 
			"'and'", "'or'", "'between'", "'instance'", "'of'", "'not'", "'function'", 
			"'external'", "'true'", "'false'", "'null'", "'range'", "'list'", "'context'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BLOCK_COMMENT", "LINE_COMMENT", "WS", "ELLIPSIS", "POWER", "LE", 
			"GE", "NE", "DOT_DOT", "ARROW", "EQ", "LT", "GT", "PLUS", "MINUS", "STAR", 
			"SLASH", "DOT", "COMMA", "COLON", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
			"LBRACE", "RBRACE", "AT", "FOR", "IN", "RETURN", "IF", "THEN", "ELSE", 
			"SOME", "EVERY", "SATISFIES", "AND", "OR", "BETWEEN", "INSTANCE", "OF", 
			"NOT", "FUNCTION", "EXTERNAL", "TRUE", "FALSE", "NULL", "RANGE", "LIST", 
			"CONTEXT", "STRING_LITERAL", "NUMBER_LITERAL", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FeelParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FeelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionRootContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FeelParser.EOF, 0); }
		public ExpressionRootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionRoot; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitExpressionRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionRootContext expressionRoot() throws RecognitionException {
		ExpressionRootContext _localctx = new ExpressionRootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expressionRoot);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			expression();
			setState(117);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnaryTestsRootContext extends ParserRuleContext {
		public UnaryTestsContext unaryTests() {
			return getRuleContext(UnaryTestsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FeelParser.EOF, 0); }
		public UnaryTestsRootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryTestsRoot; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitUnaryTestsRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryTestsRootContext unaryTestsRoot() throws RecognitionException {
		UnaryTestsRootContext _localctx = new UnaryTestsRootContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_unaryTestsRoot);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			unaryTests();
			setState(120);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextualExpressionsRootContext extends ParserRuleContext {
		public TextualExpressionsContext textualExpressions() {
			return getRuleContext(TextualExpressionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FeelParser.EOF, 0); }
		public TextualExpressionsRootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textualExpressionsRoot; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitTextualExpressionsRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextualExpressionsRootContext textualExpressionsRoot() throws RecognitionException {
		TextualExpressionsRootContext _localctx = new TextualExpressionsRootContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_textualExpressionsRoot);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			textualExpressions();
			setState(123);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeRootContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FeelParser.EOF, 0); }
		public TypeRootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeRoot; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitTypeRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeRootContext typeRoot() throws RecognitionException {
		TypeRootContext _localctx = new TypeRootContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeRoot);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			type();
			setState(126);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public TextualExpressionContext textualExpression() {
			return getRuleContext(TextualExpressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			textualExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextualExpressionsContext extends ParserRuleContext {
		public List<TextualExpressionContext> textualExpression() {
			return getRuleContexts(TextualExpressionContext.class);
		}
		public TextualExpressionContext textualExpression(int i) {
			return getRuleContext(TextualExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FeelParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FeelParser.COMMA, i);
		}
		public TextualExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textualExpressions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitTextualExpressions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextualExpressionsContext textualExpressions() throws RecognitionException {
		TextualExpressionsContext _localctx = new TextualExpressionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_textualExpressions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			textualExpression();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(131);
				match(COMMA);
				setState(132);
				textualExpression();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextualExpressionContext extends ParserRuleContext {
		public NegatedUnaryTestsContext negatedUnaryTests() {
			return getRuleContext(NegatedUnaryTestsContext.class,0);
		}
		public ForExpressionContext forExpression() {
			return getRuleContext(ForExpressionContext.class,0);
		}
		public IfExpressionContext ifExpression() {
			return getRuleContext(IfExpressionContext.class,0);
		}
		public QuantifiedExpressionContext quantifiedExpression() {
			return getRuleContext(QuantifiedExpressionContext.class,0);
		}
		public DisjunctionContext disjunction() {
			return getRuleContext(DisjunctionContext.class,0);
		}
		public TextualExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textualExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitTextualExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextualExpressionContext textualExpression() throws RecognitionException {
		TextualExpressionContext _localctx = new TextualExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_textualExpression);
		try {
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				negatedUnaryTests();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				forExpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(140);
				ifExpression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(141);
				quantifiedExpression();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(142);
				disjunction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForExpressionContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(FeelParser.FOR, 0); }
		public List<IterationContextContext> iterationContext() {
			return getRuleContexts(IterationContextContext.class);
		}
		public IterationContextContext iterationContext(int i) {
			return getRuleContext(IterationContextContext.class,i);
		}
		public TerminalNode RETURN() { return getToken(FeelParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(FeelParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FeelParser.COMMA, i);
		}
		public ForExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitForExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForExpressionContext forExpression() throws RecognitionException {
		ForExpressionContext _localctx = new ForExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_forExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(FOR);
			setState(146);
			iterationContext();
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(147);
				match(COMMA);
				setState(148);
				iterationContext();
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154);
			match(RETURN);
			setState(155);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IterationContextContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode IN() { return getToken(FeelParser.IN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode DOT_DOT() { return getToken(FeelParser.DOT_DOT, 0); }
		public IterationContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iterationContext; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitIterationContext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IterationContextContext iterationContext() throws RecognitionException {
		IterationContextContext _localctx = new IterationContextContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_iterationContext);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			name();
			setState(158);
			match(IN);
			setState(159);
			expression();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT_DOT) {
				{
				setState(160);
				match(DOT_DOT);
				setState(161);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfExpressionContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(FeelParser.IF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode THEN() { return getToken(FeelParser.THEN, 0); }
		public TerminalNode ELSE() { return getToken(FeelParser.ELSE, 0); }
		public IfExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitIfExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfExpressionContext ifExpression() throws RecognitionException {
		IfExpressionContext _localctx = new IfExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(IF);
			setState(165);
			expression();
			setState(166);
			match(THEN);
			setState(167);
			expression();
			setState(168);
			match(ELSE);
			setState(169);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuantifiedExpressionContext extends ParserRuleContext {
		public List<IterationBindingContext> iterationBinding() {
			return getRuleContexts(IterationBindingContext.class);
		}
		public IterationBindingContext iterationBinding(int i) {
			return getRuleContext(IterationBindingContext.class,i);
		}
		public TerminalNode SATISFIES() { return getToken(FeelParser.SATISFIES, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SOME() { return getToken(FeelParser.SOME, 0); }
		public TerminalNode EVERY() { return getToken(FeelParser.EVERY, 0); }
		public List<TerminalNode> COMMA() { return getTokens(FeelParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FeelParser.COMMA, i);
		}
		public QuantifiedExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quantifiedExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitQuantifiedExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuantifiedExpressionContext quantifiedExpression() throws RecognitionException {
		QuantifiedExpressionContext _localctx = new QuantifiedExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_quantifiedExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			_la = _input.LA(1);
			if ( !(_la==SOME || _la==EVERY) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(172);
			iterationBinding();
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(173);
				match(COMMA);
				setState(174);
				iterationBinding();
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(180);
			match(SATISFIES);
			setState(181);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IterationBindingContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode IN() { return getToken(FeelParser.IN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public IterationBindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iterationBinding; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitIterationBinding(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IterationBindingContext iterationBinding() throws RecognitionException {
		IterationBindingContext _localctx = new IterationBindingContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_iterationBinding);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			name();
			setState(184);
			match(IN);
			setState(185);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DisjunctionContext extends ParserRuleContext {
		public List<ConjunctionContext> conjunction() {
			return getRuleContexts(ConjunctionContext.class);
		}
		public ConjunctionContext conjunction(int i) {
			return getRuleContext(ConjunctionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(FeelParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(FeelParser.OR, i);
		}
		public DisjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disjunction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FeelParserVisitor ) return ((FeelParserVisitor<? extends T>)visitor).visitDisjunction(this);
			else return visitor.visitChildren(this);
		}
	}
